hot fix for reload button unexpected wrap

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 					<button class="btn btn-large js-preset" id="js-preset-iphone">iPhone/touch</button>
 				</div>
 			</div>
-			<label>Item expands (refresh needed after changed):</label>
+			<label>Item expands (reload needed after changed):</label>
 			<div class="btn-toolbar">
 				<div class="btn-group">
 					<button class="btn js-expand-mode" id="js-expand-mode-inline">inline</button>
-					<button class="btn js-expand-mode" id="js-expand-mode-outline">outline</button>
-					<button class="btn js-expand-mode" id="js-expand-mode-stacked">stacked</button>
+					<button class="btn js-expand-mode" id="js-expand-mode-outline">outline (sidebar)</button>
+					<button class="btn js-expand-mode" id="js-expand-mode-stacked">stacked (sidebar)</button>
 				</div>
 			</div>
 			<label>Mobile (not working as expected currently):</label>
