updated to jQuery 1.7.2, min for performance

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 
-	<script type="text/javascript" src="assets/third/js/jquery.js"></script>
+	<script type="text/javascript" src="assets/third/js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="assets/third/js/jquery.xdomainajax.js"></script>
 	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
 	<script type="text/javascript" src="assets/third/js/doT.js"></script>
