--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="zh-CN" manifest="subv.appcache">
 <head>
 	<meta charset="UTF-8" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=320" />
+	<!--<meta name="apple-mobile-web-app-capable" content="no" /> `yes' is bad for open webpages -->
+	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=device-width" />
 	<meta id="viewport-fix" name="viewport" content="" />
 	<!--<meta name="viewport" content="initial-scale=1.0" />-->
 	<title>Subv</title>
