#footer change, make #reload-btn always native in webkit

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			</div><!-- /#item -->
 		</div><!-- /#content -->
 		<div id="footer">
-			<a class="pull-right" href="https://github.com/gdd/subv">Subv</a>
+			Powered by <a href="https://github.com/gdd/subv">Subv</a>.
 		</div>
 	</div><!-- /#wrapper -->
 
