topic ending clean up

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN" manifest="subv.appcache">
+<html lang="zh-CN" manifest="1subv.appcache">
 <head>
 	<meta charset="UTF-8" />
 	<!--<meta name="apple-mobile-web-app-capable" content="no" /> `yes' is bad for open webpages -->
@@ -214,6 +214,9 @@
 		</div>
 		-->
 		<div class="item-toolbox">
+			<button class="btn goto-item" id="goto-item-{{=it.id}}">Back to the topic title</button>
+			<span class="pull-right square">◆</span>
+			<!--
 			<div class="btn-group dropup">
 				<a href="#" class="dropdown-toggle square" data-toggle="dropdown">◆</a>
 				<ul class="dropdown-menu">
@@ -221,6 +224,7 @@
 					<li><a href="#" class="goto-top">Go to top of the page</a></li>
 				</ul>
 			</div>
+			-->
 		</div>
 	</div>
 
