--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-CN" manifest="1subv.appcache">
+<html lang="zh-CN" manifest="subv.appcache">
 <head>
 	<meta charset="UTF-8" />
 	<!--<meta name="apple-mobile-web-app-capable" content="no" /> `yes' is bad for open webpages -->
-	<meta id="viewport-width" name="viewport" content="initial-scale=1.0, width=device-width" />
-	<meta id="viewport-fix" name="viewport" content="" />
-	<!--<meta name="viewport" content="initial-scale=1.0" />-->
+	<meta id="viewport-width" name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Subv</title>
 	<link rel="apple-touch-icon" href="assets/image/more_human_mind.png" />
 	<link rel="icon" type="image/png" href="assets/image/16x.png" />
 
 	<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap.min.css" />
-	<!--<link rel="stylesheet" type="text/css" href="assets/third/css/bootstrap-responsive.css" />-->
 	<link rel="stylesheet" type="text/css" href="assets/third/css/font-awesome.css" />
 	<link rel="stylesheet" type="text/css" href="assets/css/subv.css" />
 
@@ -64,13 +61,6 @@
 		</div>
 
 		<div id="prefs" class="">
-			<!--
-			<div class="btn-toolbar">
-				<div class="btn-group">
-					<button class="btn" id="btn-update"><i class="icon-refresh"></i> update app now</button>
-				</div>
-			</div>
-			-->
 			<label>Preset modes:</label>
 			<div class="btn-toolbar">
 				<div class="btn-group">
@@ -86,6 +76,7 @@
 					<button class="btn js-expand-mode" id="js-expand-mode-stacked">stack in sidebar</button>
 				</div>
 			</div>
+			<!--
 			<label>Mobile (not working as expected currently):</label>
 			<div class="btn-toolbar">
 				<div class="btn-group">
@@ -101,6 +92,7 @@
 					</select>
 				</div>
 			</div>
+			-->
 			<label>Width controllers:</label>
 			<div class="btn-toolbar width-tb">
 				<div class="width-tb-margin">
