fixed icons, urls

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 	<script type="text/javascript" src="assets/third/js/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="assets/third/js/jquery.xdomainajax.js"></script>
-	<script type="text/javascript" src="assets/third/js/amplify.store.js"></script>
-	<script type="text/javascript" src="assets/third/js/doT.js"></script>
+	<script type="text/javascript" src="assets/third/js/amplify.store.min.js"></script>
+	<script type="text/javascript" src="assets/third/js/doT.min.js"></script>
 	<script type="text/javascript" src="assets/third/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/subv.js"></script>
 	<script type="text/javascript" src="assets/js/subv.api.v2ex.js"></script>
